--- a/ShoppingSystem/GoodsItemDetailViewController.storyboard
+++ b/ShoppingSystem/GoodsItemDetailViewController.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Jgz-Hw-Ii9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Jgz-Hw-Ii9">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -34,14 +34,23 @@
                                             <constraint firstAttribute="width" constant="44" id="r33-IB-nrR"/>
                                         </constraints>
                                         <state key="normal" image="icon_im_not"/>
+                                        <connections>
+                                            <action selector="messageButtonClicked:" destination="Jgz-Hw-Ii9" eventType="touchUpInside" id="9fg-Qc-IQL"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SAf-iO-M33">
                                         <rect key="frame" x="44" y="0.0" width="44" height="44"/>
                                         <state key="normal" image="item_collect_02"/>
+                                        <connections>
+                                            <action selector="collectionButtonClicked:" destination="Jgz-Hw-Ii9" eventType="touchUpInside" id="U3K-aG-M3L"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q6s-Aj-0nG">
                                         <rect key="frame" x="88" y="0.0" width="44" height="44"/>
                                         <state key="normal" image="icon_tabbar_discovery"/>
+                                        <connections>
+                                            <action selector="voteButtonClicked:" destination="Jgz-Hw-Ii9" eventType="touchUpInside" id="Z0p-br-trB"/>
+                                        </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sor-Eo-MCl">
                                         <rect key="frame" x="132" y="0.0" width="282" height="44"/>
@@ -50,12 +59,18 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="141" height="44"/>
                                                 <color key="backgroundColor" red="0.16588813012120787" green="0.53212941753926701" blue="0.5266652580044251" alpha="1" colorSpace="calibratedRGB"/>
                                                 <state key="normal" title="加入购物车"/>
+                                                <connections>
+                                                    <action selector="addToCart:" destination="Jgz-Hw-Ii9" eventType="touchUpInside" id="O7E-wz-r8o"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E5f-7i-4D2">
                                                 <rect key="frame" x="141" y="0.0" width="141" height="44"/>
                                                 <color key="backgroundColor" red="0.38777747486405906" green="0.64557428010471196" blue="0.31843134159624958" alpha="1" colorSpace="calibratedRGB"/>
                                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <state key="normal" title="立即购买"/>
+                                                <connections>
+                                                    <action selector="buyButtonClicked:" destination="Jgz-Hw-Ii9" eventType="touchUpInside" id="85h-pz-2ip"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -117,7 +132,7 @@
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="你好歹都会死后发生的纠纷拉伸的积分拉伸的减肥啦；束带结发深刻的叫法；老师看到阿斯顿发记录卡圣诞节福利卡束带结发啥打法上对法拉速度快解放；爱上当减肥；按时到路口附近 " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="19x-DE-1Rl">
                                                 <rect key="frame" x="15" y="55" width="384" height="63"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="宝贝描述" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G6q-AR-Qct">
@@ -126,7 +141,7 @@
                                                     <constraint firstAttribute="height" constant="44" id="De2-1e-TkM"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
@@ -163,7 +178,7 @@
                                                     <constraint firstAttribute="width" constant="64" id="wld-RU-Pjf"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="InQ-Mc-sGS">
@@ -240,11 +255,13 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                     <connections>
                         <outlet property="bannerView" destination="jNN-sy-njZ" id="pdo-qV-tUQ"/>
+                        <outlet property="collectButton" destination="SAf-iO-M33" id="Hhb-vg-wag"/>
                         <outlet property="commentTableView" destination="InQ-Mc-sGS" id="aEn-RQ-DT0"/>
                         <outlet property="commentView" destination="nSg-I2-XSb" id="79C-JW-yQU"/>
                         <outlet property="commentcountLabel" destination="eHt-3s-fjr" id="fNa-R1-ay3"/>
                         <outlet property="descritionLabel" destination="19x-DE-1Rl" id="Foh-nQ-kJI"/>
                         <outlet property="titleTableview" destination="oR7-9J-YgU" id="cNa-J6-JK1"/>
+                        <outlet property="voteButton" destination="Q6s-Aj-0nG" id="oaS-EB-K3v"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pit-vB-04L" userLabel="First Responder" sceneMemberID="firstResponder"/>
