--- a/ShoppingSystem/Index/View/IndexCustomCollectionViewCell.xib
+++ b/ShoppingSystem/Index/View/IndexCustomCollectionViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -26,7 +26,7 @@
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="新疆葡萄 提子" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cLd-o4-E3z">
                                     <rect key="frame" x="15" y="40" width="255" height="40"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="m8y-WO-aJG">
@@ -42,17 +42,18 @@
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="99.9" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fVp-Sn-5Jw">
                                             <rect key="frame" x="35" y="0.0" width="100" height="40"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="100" id="M0B-od-ts1"/>
                                                 <constraint firstAttribute="height" constant="40" id="rvU-V5-TQI"/>
+                                                <constraint firstAttribute="width" constant="100" id="xeT-nF-5Rk"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="已售280" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bif-Sz-rcy">
-                                            <rect key="frame" x="145" y="0.0" width="110" height="40"/>
+                                            <rect key="frame" x="155" y="0.0" width="100" height="40"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="40" id="Qkz-HX-FT7"/>
+                                                <constraint firstAttribute="width" constant="100" id="iKk-fR-OJN"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <nil key="highlightedColor"/>
@@ -60,18 +61,18 @@
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="p4W-ZZ-Xi9" firstAttribute="leading" secondItem="m8y-WO-aJG" secondAttribute="leading" constant="-5" id="K1i-cy-ahh"/>
-                                        <constraint firstItem="p4W-ZZ-Xi9" firstAttribute="centerY" secondItem="m8y-WO-aJG" secondAttribute="centerY" id="YVr-73-fmN"/>
-                                        <constraint firstAttribute="trailing" secondItem="Bif-Sz-rcy" secondAttribute="trailing" id="f55-TO-oaM"/>
+                                        <constraint firstAttribute="trailing" secondItem="Bif-Sz-rcy" secondAttribute="trailing" id="KcG-Un-Fdt"/>
                                         <constraint firstItem="fVp-Sn-5Jw" firstAttribute="leading" secondItem="p4W-ZZ-Xi9" secondAttribute="trailing" constant="10" id="jQp-oD-DNE"/>
-                                        <constraint firstItem="Bif-Sz-rcy" firstAttribute="leading" secondItem="fVp-Sn-5Jw" secondAttribute="trailing" constant="10" id="ksw-WR-Ona"/>
                                         <constraint firstItem="Bif-Sz-rcy" firstAttribute="centerY" secondItem="m8y-WO-aJG" secondAttribute="centerY" id="p5R-GQ-I5H"/>
                                         <constraint firstItem="fVp-Sn-5Jw" firstAttribute="centerY" secondItem="m8y-WO-aJG" secondAttribute="centerY" id="rLD-Qr-TvC"/>
+                                        <constraint firstItem="p4W-ZZ-Xi9" firstAttribute="centerY" secondItem="m8y-WO-aJG" secondAttribute="centerY" id="xNR-fu-r9P"/>
                                     </constraints>
                                 </view>
                             </subviews>
                             <constraints>
                                 <constraint firstAttribute="trailing" secondItem="m8y-WO-aJG" secondAttribute="trailing" constant="15" id="AyY-GN-4tG"/>
                                 <constraint firstItem="cLd-o4-E3z" firstAttribute="height" secondItem="SnZ-om-cFY" secondAttribute="height" multiplier="1:2" id="DZF-cD-yMS"/>
+                                <constraint firstItem="m8y-WO-aJG" firstAttribute="top" secondItem="SnZ-om-cFY" secondAttribute="top" id="FMh-Pu-Ncz"/>
                                 <constraint firstItem="cLd-o4-E3z" firstAttribute="top" secondItem="m8y-WO-aJG" secondAttribute="bottom" id="Hmw-sC-G7s"/>
                                 <constraint firstItem="cLd-o4-E3z" firstAttribute="leading" secondItem="SnZ-om-cFY" secondAttribute="leading" constant="15" id="J9G-Ui-FYv"/>
                                 <constraint firstAttribute="bottom" secondItem="cLd-o4-E3z" secondAttribute="bottom" id="ScE-Id-rx5"/>
@@ -99,6 +100,12 @@
                 <constraint firstAttribute="trailing" secondItem="ZCJ-0v-mw9" secondAttribute="trailing" id="zs8-HL-dgb"/>
             </constraints>
             <size key="customSize" width="285" height="218"/>
+            <connections>
+                <outlet property="imgView" destination="xS7-Ym-sRg" id="iRs-rF-OF0"/>
+                <outlet property="priceLabel" destination="fVp-Sn-5Jw" id="hPa-MF-j6I"/>
+                <outlet property="saledLabel" destination="Bif-Sz-rcy" id="6Tv-JS-9Re"/>
+                <outlet property="titleLabel" destination="cLd-o4-E3z" id="qPC-Yh-d9L"/>
+            </connections>
             <point key="canvasLocation" x="321.5" y="275"/>
         </collectionViewCell>
     </objects>
