--- a/ShoppingSystem/SpecificationTableViewCell.xib
+++ b/ShoppingSystem/SpecificationTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -158,7 +158,10 @@
             <connections>
                 <outlet property="cView" destination="x3L-1d-Eon" id="sNb-dJ-fxj"/>
                 <outlet property="deleteButton" destination="Ks4-N1-xMI" id="u6C-2h-Nye"/>
+                <outlet property="priceLabel" destination="1Al-Z4-rgb" id="wfr-xU-VDL"/>
+                <outlet property="sepecificationLabel" destination="VEV-yY-5tY" id="XA4-jZ-jqj"/>
                 <outlet property="specifiacationView" destination="LkJ-QV-3Xc" id="quH-yd-Z3m"/>
+                <outlet property="stockCount" destination="OOM-K9-0t1" id="9bt-zD-DhX"/>
             </connections>
             <point key="canvasLocation" x="230.5" y="242"/>
         </tableViewCell>
