--- a/ShoppingSystem/TitleView.xib
+++ b/ShoppingSystem/TitleView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -8,7 +8,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TitleView" customModule="ShoppingSystem" customModuleProvider="target">
             <connections>
+                <outlet property="categoryButton" destination="afd-h9-ilZ" id="DLJ-UI-e3Z"/>
                 <outlet property="contentView" destination="yAr-H5-plb" id="5NW-7s-V1x"/>
+                <outlet property="titleTextField" destination="IcH-cl-Pue" id="aFJ-j5-jRP"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -34,24 +36,27 @@
                                 <constraint firstAttribute="height" constant="30" id="cKI-Oh-TNd"/>
                             </constraints>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请选择分类" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UsH-SH-Sx9">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="afd-h9-ilZ">
                             <rect key="frame" x="15" y="38" width="530" height="225"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" red="0.66274509800000003" green="0.66274509800000003" blue="0.66274509800000003" alpha="1" colorSpace="calibratedRGB"/>
-                            <nil key="highlightedColor"/>
-                        </label>
+                            <state key="normal" title="请选择分类">
+                                <color key="titleColor" red="0.66274509803921566" green="0.66274509803921566" blue="0.66274509803921566" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="categoryButtonClik:" destination="-1" eventType="touchUpInside" id="cUJ-gO-Dlj"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="UsH-SH-Sx9" firstAttribute="centerY" secondItem="GWe-OU-w1w" secondAttribute="centerY" id="2hL-Is-6NZ"/>
-                        <constraint firstItem="UsH-SH-Sx9" firstAttribute="height" secondItem="GWe-OU-w1w" secondAttribute="height" multiplier="0.75" id="CdL-fm-nDl"/>
+                        <constraint firstItem="afd-h9-ilZ" firstAttribute="leading" secondItem="GWe-OU-w1w" secondAttribute="leading" constant="15" id="4uZ-t2-Zfo"/>
                         <constraint firstItem="kSZ-Er-dRd" firstAttribute="centerY" secondItem="GWe-OU-w1w" secondAttribute="centerY" id="IT2-2H-laT"/>
-                        <constraint firstItem="UsH-SH-Sx9" firstAttribute="leading" secondItem="GWe-OU-w1w" secondAttribute="leading" constant="15" id="Niy-uK-uBd"/>
+                        <constraint firstItem="afd-h9-ilZ" firstAttribute="centerY" secondItem="GWe-OU-w1w" secondAttribute="centerY" id="PbM-cg-PZw"/>
+                        <constraint firstItem="afd-h9-ilZ" firstAttribute="height" secondItem="GWe-OU-w1w" secondAttribute="height" multiplier="0.75" id="UH7-kI-qAB"/>
+                        <constraint firstItem="kSZ-Er-dRd" firstAttribute="leading" secondItem="afd-h9-ilZ" secondAttribute="trailing" constant="15" id="cwS-EW-eSJ"/>
                         <constraint firstItem="VOO-Nz-qJu" firstAttribute="leading" secondItem="GWe-OU-w1w" secondAttribute="leading" constant="15" id="ea6-Y4-8dT"/>
                         <constraint firstAttribute="trailing" secondItem="kSZ-Er-dRd" secondAttribute="trailing" constant="10" id="kkh-4G-QQ8"/>
                         <constraint firstAttribute="trailing" secondItem="VOO-Nz-qJu" secondAttribute="trailing" id="r2H-9y-aAG"/>
                         <constraint firstAttribute="bottom" secondItem="VOO-Nz-qJu" secondAttribute="bottom" id="sKk-zS-ZRN"/>
-                        <constraint firstItem="kSZ-Er-dRd" firstAttribute="leading" secondItem="UsH-SH-Sx9" secondAttribute="trailing" constant="15" id="vFH-b2-RXD"/>
                     </constraints>
                 </view>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入标题" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IcH-cl-Pue">
